Bug#129: (#132)
- No bug, just invisible error messages
- Added Error rendering

--- a/src/AppBundle/Resources/public/css/app.css
+++ b/src/AppBundle/Resources/public/css/app.css
@@ -495,3 +495,6 @@ td.admin-listing {
 .approved { margin-right: 20px; text-align: left }
 
 .schedule-search { width: inherit; min-width: 400px; padding-bottom: 10px; margin-left: auto; margin-right: auto; }
+
+.errors ul { margin-left: 40px; }
+.errors li { color: #FF0000 }
